<resources>
    <string name="app_name">KitKat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_message">Message</string>
    <string name="title_camera">Camera</string>
    <string name="title_profil">Profil</string>
    <string name="title_friend">Friend</string>
    <string name="title_add">Ajout</string>

    <string name="take_photo">Take Photo</string>
    <string name="recording_status">Start Recording</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="message">Message</string>
    <string name="messageUsernameText">Bonjon bonjour</string>
    <string name="messageLastMessageText">Bonjon bonjour</string>
    <string name="messageTimeSinceText">1d</string>

</resources>