<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kitkat.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.kitkat.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.kitkat.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <argument
            android:name="previousFragmentId"
            app:argType="integer"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.kitkat.ui.profile.ProfileFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_friend"
        android:name="com.example.kitkat.ui.friend.FriendFragment"
        android:label="@string/title_friend"
        tools:layout="@layout/fragment_friend" />


</navigation>