<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="75dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UselessParent"
            >
            <View
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:background="@color/black"
                android:layout_margin="5dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">
                    <TextView
                        android:textSize="16sp"
                        android:id="@+id/messageUsernameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/messageUsernameText"
                        android:textColor="@color/black"/>
                    <TextView
                        android:textSize="14sp"
                        android:id="@+id/messageLastMessageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/messageLastMessageText"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/messageTimeSinceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/messageTimeSinceText"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="16sp"
                    android:layout_marginEnd="5dp"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>